# Lucid.Rtc

./: .gitignore  Cargo.toml  Lucid.Rtc.slnx  README-ja.md  README.md  build.ps1  build.sh
.github/workflows/: build.yml
crates/lucid-rtc/: Cargo.toml
crates/lucid-rtc-sys/: Cargo.toml
crates/lucid-rtc-sys/src/: helpers.rs  lib.rs
crates/lucid-rtc/src/: config.rs  lib.rs  signaling.rs
crates/webrtc-sharp/: Cargo.toml
crates/webrtc-sharp-sys/: Cargo.toml
crates/webrtc-sharp-sys/src/: lib.rs
crates/webrtc-sharp/src/: data_channel.rs  error.rs  ice.rs  peer.rs
docs/: GO_SETUP.md
docs/api/: high-level.md  low-level.md  messagepack.md  types.md
docs/api/ja/: high-level.md  low-level.md  messagepack.md  types.md
docs/samples/: new-api-sample.cs  old-api-sample.cs
dotnet/: Directory.Build.props
dotnet/Lucid.Rtc/: Lucid.Rtc.csproj  README.md  RtcClient.cs
dotnet/Lucid.Rtc.Core/: Lucid.Rtc.Core.csproj  MediaClient.cs  Peer.cs  RtcClient.cs  RtcConfig.cs  RtcConnection.cs  RtcConnectionBuilder.cs  RtcEvent.cs
dotnet/Lucid.Rtc.Core/Events/: RtcEvents.cs
dotnet/Lucid.Rtc.Core/Native/: NativeMethods.cs
dotnet/Lucid.Rtc.MessagePack/: Lucid.Rtc.MessagePack.csproj  RtcMessagePackExtensions.cs
dotnet/Lucid.Rtc.Native/: Lucid.Rtc.Native.linux-arm.csproj  Lucid.Rtc.Native.linux-arm64.csproj  Lucid.Rtc.Native.linux-x64.csproj  Lucid.Rtc.Native.osx-arm64.csproj  Lucid.Rtc.Native.osx-x64.csproj  Lucid.Rtc.Native.win-arm64.csproj  Lucid.Rtc.Native.win-x64.csproj  Lucid.Rtc.Native.win-x86.csproj
dotnet/Lucid.Rtc.Native.All/: Lucid.Rtc.Native.All.csproj
dotnet/Lucid.Rtc.Pion/: Lucid.Rtc.Pion.All.csproj  Lucid.Rtc.Pion.csproj  Lucid.Rtc.Pion.linux-arm.csproj  Lucid.Rtc.Pion.linux-arm64.csproj  Lucid.Rtc.Pion.linux-x64.csproj  Lucid.Rtc.Pion.osx-arm64.csproj  Lucid.Rtc.Pion.osx-x64.csproj  Lucid.Rtc.Pion.win-arm64.csproj  Lucid.Rtc.Pion.win-x64.csproj  Lucid.Rtc.Pion.win-x86.csproj
dotnet/Lucid.Rtc.Rust/: Lucid.Rtc.Rust.All.csproj  Lucid.Rtc.Rust.csproj  Lucid.Rtc.Rust.linux-arm.csproj  Lucid.Rtc.Rust.linux-arm64.csproj  Lucid.Rtc.Rust.linux-x64.csproj  Lucid.Rtc.Rust.osx-arm64.csproj  Lucid.Rtc.Rust.osx-x64.csproj  Lucid.Rtc.Rust.win-arm64.csproj  Lucid.Rtc.Rust.win-x64.csproj  Lucid.Rtc.Rust.win-x86.csproj
dotnet/Lucid.Rtc.Tests/: IceCandidateTests.cs  Lucid.Rtc.Tests.csproj  RtcConfigTests.cs  RtcEventTests.cs
dotnet/Lucid.Rtc/Native/: NativeMethods.cs
dotnet/samples/HighLevelSample/: Program.cs  (+1 more)
examples/SimpleChat/: Program.cs  SimpleChat.csproj
pion/: client.go  exports.go  go.mod  media.go
scripts/: build-pion.ps1  build-pion.sh
(+2 files in other folders)
