[package]
name = "lucid-rtc-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C FFI bindings for Lucid.Rtc"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "lucid_rtc"

[dependencies]
lucid-rtc = { path = "../webrtc-sharp" }
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
cbindgen = "0.26"
